[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/whitecircle.png" type="Texture" id=1]
[ext_resource path="res://art/whitesquare.png" type="Texture" id=2]
[ext_resource path="res://src/AOE.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "FadeAway"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimNode:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.764706 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="AOE" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimNode" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.764706 )

[node name="Line" type="Sprite" parent="AnimNode"]
visible = false
scale = Vector2( 0.004, 0.5 )
texture = ExtResource( 2 )
offset = Vector2( 250, 0 )

[node name="Narrow" type="Sprite" parent="AnimNode"]
visible = false
scale = Vector2( 0.004, 0.05 )
texture = ExtResource( 2 )

[node name="Circle" type="Sprite" parent="AnimNode"]
visible = false
texture = ExtResource( 1 )

[node name="Square" type="Sprite" parent="AnimNode"]
visible = false
scale = Vector2( 0.004, 0.004 )
texture = ExtResource( 2 )

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeAway = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
